WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211453
Fix setting host on URL when no port is specified
https://bugs.webkit.org/show_bug.cgi?id=211453
Summary
Fix setting host on URL when no port is specified
Rob Buis
Reported
2020-05-05 09:35:56 PDT
Fix setting host on URL when no port is specified by calling setHost instead of setHostAndPort in order to not change the current port.
Attachments
Patch
(4.31 KB, patch)
2020-05-05 09:38 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(9.54 KB, patch)
2020-05-05 10:35 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2020-05-05 09:38:03 PDT
Created
attachment 398520
[details]
Patch
Rob Buis
Comment 2
2020-05-05 10:35:28 PDT
Created
attachment 398524
[details]
Patch
EWS
Comment 3
2020-05-05 21:37:48 PDT
Committed
r261212
: <
https://trac.webkit.org/changeset/261212
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 398524
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-05-05 21:38:17 PDT
<
rdar://problem/62916488
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug