Fix setting host on URL when no port is specified https://bugs.webkit.org/show_bug.cgi?id=211453

Patch by Rob Buis <rbuis@igalia.com> on 2020-05-05
Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Update improved test expectations.

* web-platform-tests/url/url-setters-expected.txt:

Source/WebCore:

Behavior matches Firefox and Chrome.

Test: web-platform-tests/url/url-setters.html

* html/URLDecomposition.cpp:
(WebCore::URLDecomposition::setHost):

LayoutTests:

Update improved test expectations.

* fast/dom/DOMURL/set-href-attribute-host-expected.txt:
* fast/dom/DOMURL/set-href-attribute-host.html:
* fast/dom/HTMLAnchorElement/set-href-attribute-host-expected.txt:
* fast/dom/HTMLAnchorElement/set-href-attribute-host.html:

Canonical link: https://commits.webkit.org/224385@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261212 268f45cc-cd09-0410-ab3c-d52691b4dbfc